--- a/style.css
+++ b/style.css
@@ -27,19 +27,18 @@ li{
 /* header */
 header{
     padding: 30px 0;
-    background-color: #123d88;
+    background-color: #123D88;
 }
 
 h1{
     line-height: 1;
 }
 
-
 /* footer */
 footer{
     padding: 30px 0;
+    background-color: #123D88;
     text-align: right;
-    background-color: #123d88;
 }
 
 small{
@@ -49,15 +48,15 @@ small{
 
 /* outline */
 .outline-notes{
-    margin: 0 0 18px;
-    color: #256be6;
+    margin-bottom: 18px;
+    color: #256BE6;
     font-size: 14px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
 }
 
 .outline-title{
-    margin: 0 0 40px;
+    margin-bottom: 40px;
     color: #262934;
     font-size: 36px;
     font-weight: bold;
@@ -68,6 +67,137 @@ small{
     margin-bottom: 30px;
 }
 
+/* card */
+.card-ico{
+    margin-bottom: 40px;
+}
+
+.card-title{
+    margin-bottom: 20px;
+    color: #2f2f35;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+/* btn */
+.btn{
+    display: block;
+    width: 200px;
+    margin-top: 60px;
+    padding: 15px 0;
+    background-color: #256BE6;
+    color: #fff;
+    font-weight: bold;
+    letter-spacing: 0.025em;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 30px;
+}
+
+/* home ------------------------------*/
+/* features */
+.features{
+  padding: 80px 0;
+}
+
+.features .inner{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .features .outline{
-    width: 42.7%;
+  width: 42.7%;
+}
+
+.features-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 50%;
+  margin-bottom: -70px;/* ネガティブマージン */
+}
+
+.features-list .card{
+  width: 44%;
+  margin-bottom: 70px;
+}
+
+/* payment */
+.payment{
+  padding: 80px 0;
+  background-color: #F7FAFF;
+}
+
+.payment .inner{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.payment-pic{
+  width: 50%;
+}
+
+.payment .outline{
+  width: 42.7%;
+}
+
+/* service
+------------------------------*/
+/* wedo */
+.wedo{
+    padding: 80px 0;
+    text-align: center;
+}
+
+.wedo .outline{
+    margin-bottom: 60px;
+}
+
+.service{
+    padding: 60px 70px;
+    background-color: #F7FAFF;
+}
+
+.service-title{
+    margin-bottom: 60px;
+    color: #2f2f35;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.service-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.service-list .card{
+    width: 29.1%;
+    padding: 40px 25px;
+    background-color: #fff;
+}
+
+.service-list .btn{
+    margin: 40px auto 0;
+}
+
+/* offer */
+.offer{
+  padding: 80px 0;
+  background-color: #505050;
+  color: #fff;
+  text-align: center;
+}
+
+.offer .outline-title{
+  color: #fff;
+}
+
+.offer .btn{
+  margin-left: auto;
+  margin-right: auto;
 }
